--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Un-Shouter
 description: >
     Converts ALLCAPS text to properly formatted sentence-case text.
-baseurl: /un-shouter
+baseurl: ""
