--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ name: Un-Shouter
 description: >
     Converts ALLCAPS text to properly formatted sentence-case text.
 baseurl: ""
+
+gems:
+  - octopress-autoprefixer
